add share functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <main>
+    <main id="quote-section">
         <p class="welcome-note">Welcome aboard, pal! Brace yourself for a quote-filled adventure. Simply hit that 'hit it'
             button and let the wisdom flow!</p>
         <span class="nav-link-container">Visit <a href="saved-quotes.html" class="nav-link">Saved Quotes</a></span>
@@ -22,7 +22,6 @@
             <button type="button" class="quote-btn">Hit it!</button>
             <div class="quote-actions">
                 <button type="button" class="save-btn">Save</button>
-                <button type="button" class="share-btn">Share</button>
             </div>
             <p class="quote-text"></p>
             <span class="quote-author"></span>
