refactor js files

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Series Saga</title>
 
     <!-- favicon -->
-    <link rel="icon" href="assets/img/favicon.png" type="image/png">
+    <link rel="icon" type="image/x-icon" href="assets/media/favicon.ico">
 
     <!-- custom stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
     </main>   
 
     <!-- custom script -->
-    <script src="assets/script/script.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
