--- a/saved-quotes.html
+++ b/saved-quotes.html
@@ -7,10 +7,10 @@
     <title>Series Saga | Saved Quotes</title>
 
     <!-- favicon -->
-    <link rel="icon" href="assets/img/favicon.png" type="image/png">
+    <link rel="icon" type="image/x-icon" href="assets/media/favicon.ico">
 
     <!-- custom stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         </div>
     </main>
     <!-- custom script -->
-    <script src="assets/script/savedQuotesScript.js"></script>
+    <script src="assets/js/savedQuotesScript.js"></script>
 </body>
 
 </html>
