--- a/index.html
+++ b/index.html
@@ -15,19 +15,24 @@
 
 <body>
     <main id="quote-section">
-        <p class="welcome-note">Welcome aboard, pal! Brace yourself for a quote-filled adventure. Simply hit that 'hit it'
+        <p class="welcome-note">Welcome aboard, pal! Brace yourself for a quote-filled adventure. Simply hit that 'hit
+            it'
             button and let the wisdom flow!</p>
         <span class="nav-link-container">Visit <a href="saved-quotes.html" class="nav-link">Saved Quotes</a></span>
         <div class="quote-container">
             <button type="button" class="quote-btn">Hit it!</button>
             <div class="quote-actions">
-                <button type="button" class="save-btn">Save</button>
+                <button type="button" class="save-btn">Save <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50"
+                        width="24px" height="24px">
+                        <path
+                            d="M 12.8125 2 C 12.335938 2.089844 11.992188 2.511719 12 3 L 12 47 C 11.996094 47.359375 12.1875 47.691406 12.496094 47.871094 C 12.804688 48.054688 13.1875 48.054688 13.5 47.875 L 25 41.15625 L 36.5 47.875 C 36.8125 48.054688 37.195313 48.054688 37.503906 47.871094 C 37.8125 47.691406 38.003906 47.359375 38 47 L 38 3 C 38 2.449219 37.550781 2 37 2 L 13 2 C 12.96875 2 12.9375 2 12.90625 2 C 12.875 2 12.84375 2 12.8125 2 Z M 14 4 L 36 4 L 36 45.25 L 25.5 39.125 C 25.191406 38.945313 24.808594 38.945313 24.5 39.125 L 14 45.25 Z" />
+                    </svg></button>
             </div>
             <p class="quote-text"></p>
             <span class="quote-author"></span>
             <span class="quote-series"></span>
         </div>
-    </main>   
+    </main>
 
     <!-- custom script -->
     <script src="assets/js/main.js"></script>
