--- a/saved-quotes.html
+++ b/saved-quotes.html
@@ -23,7 +23,8 @@
         </div>
     </main>
     <!-- custom script -->
-    <script src="assets/js/savedQuotesScript.js"></script>
+    <script src="assets/js/shared.js"></script>
+    <script src="assets/js/saved-quotes.js"></script>
 </body>
 
 </html>
