--- a/shared-quote.html
+++ b/shared-quote.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Series Saga | Shared Quote</title>
 
     <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="assets/media/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/media/favicon.ico" />
 
     <!-- custom stylesheet -->
-    <link rel="stylesheet" href="assets/css/main.css">
-</head>
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-<body>
+  <body>
     <main>
-        <div class="shared-quotes-container">
-            <div class="shared-quotes-header">
-                <span class="shared-quotes-title">Shared Quote</span>
-                <a href="index.html">Go back to home page</a>
-            </div>
+      <div class="shared-quotes-container">
+        <div class="shared-quotes-header">
+          <span class="shared-quotes-title">Shared Quote</span>
+          <a href="index.html">Go back to home page</a>
         </div>
+      </div>
     </main>
     <!-- custom script -->
-    <script src="assets/js/sharedQuoteScript.js"></script>
-</body>
-
+    <script src="assets/js/shared.js"></script>
+    <script src="assets/js/shared-quotes.js"></script>
+  </body>
 </html>
